<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add_favorite"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/add_to_favorite"
        app:showAsAction="ifRoom" />
</menu>