<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/discover" />
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
</menu>